Fixing word wrap on iPhone

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -799,6 +799,7 @@ html, body {
 		    margin: 20px;
 		    border-radius: 5px;
 			cursor: pointer;
+			overflow: hidden;
 		
 			h1 {
 				padding: 0;
@@ -807,6 +808,7 @@ html, body {
 			    font-size: 24px;
 				color: #000000;
 				overflow-wrap: break-word;
+				word-wrap: break-word;
 
 				.rating {
 				    float: right;
